--- a/static/index.html
+++ b/static/index.html
@@ -1,3 +1,4 @@
+<meta charset='utf-8'>
 <html>
   <head>
     <title>Sample App</title>
@@ -8,5 +9,5 @@
       </div>
     </div>
   </body>
-  <script src="bundle.js"></script>
+  <script src='bundle.js'></script>
 </html>
