good epicycles; no gear-array

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <div class='container'>
-      <div id='root'>
+      <h1>Epicyclic Gearing</h1>
+      <div id='epicyclic-gearing'>
       </div>
     </div>
   </body>
